--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<!DOCTYPE html>
-<html>
-<body>
-<p>jark jark jark jark</p>
-</body>
-</html>
+---
+layout: layout
+title: "Posts"
+---
+
+<section class="content">
+  <ul class="listing">
+    {% for post in site.posts %}
+      {% unless post.draft %}
+      <li>
+        <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      </li>
+      {% endunless %}
+    {% endfor %}
+  </ul>
+</section>
