Is it working yet?

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 ---
-layout: about
+layout: layout
 title: "About me"
 ---
 
 <section class="content">
-  <h1>About me</h1>
+  <h1>{{ site.name }}</h1>
 
   <p>I am a colourless green idea sleeping furiously.</p>
 </section>
