Revert "Added password protection for personal journal."
This reverts commit e150b857f6c0dca29a93ec00ccb776692639fdaf.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: inclusive
-title: "Personal"
-permalink: "/pages/c22b5f9178342609428d6f51b2c5af4c0bde6a42/"
+title: "Homepage @ tarvos.github.io"
 ---
 
 <section>
